# archeo

./: README-mini.md  README.md  pyproject.toml
baseline_recreation/: prepare_dataset.py  solution.py  train.py
baseline_solution/: architecture.md  metadata.json  solution.py
downloading/: README-S3.md
metrics/: compute_metrics_qual.py  merge_ground_truth.py
splits/: generate.py
